# fastapi-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/docs/api/: index.md
{{cookiecutter.project_slug}}/docs/development/: getting-started.md
{{cookiecutter.project_slug}}/scripts/: add_package.py  create_domain.py  create_endpoint.py  create_usecase.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/application/interfaces/repositories/: base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/application/use_cases/: base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/domain/entities/: base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/domain/value_objects/: base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructure/: config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/infrastructure/web/: api.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/presentation/responses/: base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/presentation/schemas/: base.py
